# MOCBootloader

./: .gitmodules  CMakeLists.txt  README.md
application/: CMakeLists.txt
application/cppTest/: CMakeLists.txt  main.cpp
application/minimalTest/: CMakeLists.txt  main.cpp
arch/aarch64/: arch.cmake  link.ld  startup.S  syscalls.cpp
arch/arm/: arch.cmake  link.ld  startup.S  syscalls.cpp
boards/nrf52832dk/: Board.cpp  board.cmake
boards/nrf52832dk/include/: Board.h  UartImpl.h
boards/nrf52840dongle/: board.cmake
boards/nrf52840dongle/impl/: UartImpl.cpp
boards/nrf52840dongle/include/: Board.h  UartImpl.h
boards/qemu_aarch64/: Board.cpp  board.cmake
boards/qemu_aarch64/impl/: UartImpl.cpp
boards/qemu_aarch64/include/: Board.h  UartImpl.h
boards/qemu_arm/: Board.cpp  board.cmake
boards/qemu_arm/impl/: UartImpl.cpp
boards/qemu_arm/include/: UartImpl.h
cmake/: config.cmake
coroutine/: CMakeLists.txt  MOCoroutine.cpp  MOCoroutine.h
coroutine/arch/: aarch64.S  arm.S
driver/: CMakeLists.txt
driver/uart/: Uart.cpp
include/driver/: Uart.h
scripts/: build.sh  run_application.sh  run_nrf52_qemu.sh  set_toolchain.sh
